    package which has been removed:

      partcnt     partint

 ** The function `physical_constant' has been imported from the
    physicalconstants package.

 ** The values returned by `physical_constant' have been adjusted to the
    latest (2010) recommended values by CODATA.

 ** The function `physical_constant' has a new API and should also
    perform faster.

===============================================================================
miscellaneous-1.1.0   Release Date: 2012-03-24  Release Manager:
===============================================================================

 ** IMPORTANT NOTE:
    * the function `waitbar' has been renamed `text_waitbar'. Octave core has
      implemented a Matlab compatible `waitbar' which is imcompatible with the
      old miscellaneous `waitbar'. If you use the `waitbar' function from the
      miscellaneous package you have 3 options:
        1. replace all `waitbar' calls by `text_waitbar';
        2. fix your `waitbar' calls for the new API as per octave core. Note
           that `waitbar' is graphical tool only;
        3. use an old version of the miscellaneous package or modify the source
           to keep shadowing the octave core `waitbar'.

 ** The following functions are new:

      clip      normr     text_waitbar
      normc     sample

 ** The following functions have been moved to the IO package:

      cell2csv    csvconcat     xmlread
      csv2cell    csvexplode    xmlwrite

 ** The function `clip' was imported from the audio package.

 ** The functions `apply' and `map' have been deprecated. `cellfun' and
    `arrayfun' from octave core should be used instead.

 ** The function `partarray' has been deprecated. `mat2cell' from octave core
    should be used instead.

 ** The function `temp_name' has been deprecated. `tmpnam' from octave core
    should be used instead.

 ** Multiple bug fixes and increased input check on many functions.

 ** Package is no longer automatically loaded.
