@@ -6,7 +6,7 @@ Maintainer: Octave-Forge community <octave-dev@lists.sourceforge.net>
 Title: Miscellaneous functions
 Description: Miscellaneous tools that don't fit somewhere else.
 Categories: Miscellaneous
-Depends: octave (>= 3.6.0)
+Depends: octave (>= 3.6.0), general (>= 1.3.1)
 Autoload: no
 SystemRequirements: units
 BuildRequires: termcap-devel [Debian] libncurses5-dev
